<package>
  <name>omnibot_ros_teleop</name>
  <version>1.0.0</version>
  <description>
  This package provides an easy way to publish omnibot messages for teleoperated control.
  </description>
  <maintainer email="andrew@lobos.me">Andrew Lobos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
